--- a/frontend/src/app/destaques/destaques.component.html
+++ b/frontend/src/app/destaques/destaques.component.html
@@ -1,26 +1,16 @@
-<div id="sliderDestaques" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#sliderDestaques" data-slide-to="0" class="active"></li>
-    <li data-target="#sliderDestaques" data-slide-to="1"></li>
-    <li data-target="#sliderDestaques" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">b5-carousel-item</div>
-  <a
-    class="carousel-control-prev"
-    href="#sliderDestaques"
-    role="button"
-    data-slide="prev"
-  >
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a
-    class="carousel-control-next"
-    href="#sliderDestaques"
-    role="button"
-    data-slide="next"
-  >
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+<ngb-carousel *ngIf="destaques" class="carousel slide mt-3 pt-3">
+  <ng-template ngbSlide *ngFor="let item of destaques">
+    <div class="wrapper">
+      <a href="#/produtos/{{ item.id }}">
+        <div
+          class="carousel-item-image"
+          style="background-image: url('{{ item.imagem }}'); height: 256px;"
+        ></div>
+      </a>
+    </div>
+    <div class="carousel-caption">
+      <h3>{{ item.nome }}</h3>
+      <p> {{ item.preco }}</p>
+    </div>
+  </ng-template>
+</ngb-carousel>
