update fetching, carousel

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -23,3 +23,9 @@
 
 <app-destaques></app-destaques>
 <app-produto-card></app-produto-card>
+
+<footer class="footer">
+  <p>&copy; Made by Marcos gomeS</p>
+  <a href="https://github.com/GomesMarcos" target="_blank">Github</a>
+  <a href="https://www.linkedin.com/in/marcos-gomes-73a520122/" target="_blank">LinkedIn</a>
+</footer>
