--- a/frontend/src/app/produto-card/produto-card.component.html
+++ b/frontend/src/app/produto-card/produto-card.component.html
@@ -1,3 +1,5 @@
+<app-destaques></app-destaques>
+
 <div class="container">
   <div class="row align-items-center">
     <div
@@ -7,7 +9,7 @@
     >
       <div class="card card-produto">
         <div class="card-oferta" *ngIf="item.preco_oferta > 0"><span>oferta!</span> </div>
-        <a href="#/produtos/{{ item.id }}">
+        <a routerLink="produtos/{{ item.id }}">
           <img src="{{ item.imagem }}" class="card-img-top" alt="{{ item.nome }}" />
           <div class="card-body text-dark">
             <h5 class="card-title">{{ item.nome }}</h5>
@@ -38,7 +40,7 @@
     >
       <div class="card card-produto">
         <div class="card-oferta" *ngIf="item.preco_oferta > 0"><span>oferta!</span> </div>
-        <a href="#/produtos/{{ item.id }}">
+        <a routerLink="produtos/{{ item.id }}">
           <img src="{{ item.imagem }}" class="card-img-top" alt="{{ item.nome }}" />
           <div class="card-body text-dark">
             <h5 class="card-title">{{ item.nome }}</h5>
@@ -67,7 +69,7 @@
     >
       <div class="card card-produto">
         <div class="card-oferta" *ngIf="item.preco_oferta > 0"><span>oferta!</span> </div>
-        <a href="#/produtos/{{ item.id }}">
+        <a routerLink="produtos/{{ item.id }}">
           <img src="{{ item.imagem }}" class="card-img-top" alt="{{ item.nome }}" />
           <div class="card-body text-dark">
             <h5 class="card-title">{{ item.nome }}</h5>
@@ -96,7 +98,7 @@
     >
       <div class="card card-produto">
         <div class="card-oferta" *ngIf="item.preco_oferta > 0"><span>oferta!</span> </div>
-        <a href="#/produtos/{{ item.id }}">
+        <a routerLink="produtos/{{ item.id }}">
           <img src="{{ item.imagem }}" class="card-img-top" alt="{{ item.nome }}" />
           <div class="card-body text-dark">
             <h5 class="card-title">{{ item.nome }}</h5>
